--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
 		"react-hook-form": "7.51.0",
+		"zod": "^4.1.13",
 		"zustand": "5.0.9"
 	},
 	"devDependencies": {
